--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<h1>
+  Angular TDD
+</h1>
+
+<button routerLink="/home">Home</button>
+<button routerLink="/feature">Demo</button>
+
 <router-outlet></router-outlet>
