fix: Autocomplete component.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,10 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+button {
+    margin-right: 15px;
+}
+
+hr {
+    margin: 25px !important;
+}
